tests/negative/comptime_divmod_by_zero.ora
contract ComptimeDivmodByZero {
    pub fn run() -> u256 {
        return comptime {
            let pair = @divmod(4, 0);
            pair[0];
        };
    }
}
